--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI= your_mongodb_uri
+MONGODB_URI=  mongodb+srv://paiz1031_db_user:bipjc5eJ19jPvaRo@cluster0.x0rythy.mongodb.net/?appName=Cluster0
 
 #Cloudinary
 CLOUDINARY_API_SECRET= your_cloudinary_api_secret
