--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && node dist/index.js",
     "build": "rimraf dist && tsc",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
   },
